tercera entrega de proyecto final

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
               <div class=" col-lg-6 busc ">
                 
                 <div class="input-group buscador ">
-                  <input type="search" class="form-control " placeholder="Buscar producto" aria-label="Search"
+                  <input type="search" class="form-control " id="inputBuscar"placeholder="Buscar producto" aria-label="Search"
                     aria-describedby="search-addon" />
-                  <button type="button" class="btn btn-secondary">Buscar</button>
+                  <button type="button" id="btnBuscar" class="btn btn-secondary">Buscar</button>
                 </div>
     
               </div>
